# paralleliq-dstack-plugin

./: README.md  pyproject.toml  test_plugin.py
src/paralleliq_dstack_plugin/: __init__.py  plugin.py
